# skill-demo-project

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skill-enhancement-tracker.json  skill-improvement-log.json
.agents/skills/task-api-helper/: SKILL.md
.agents/skills/task-api-helper/scripts/: task_cli.py
.github/: copilot-instructions.md
.github/instructions/: skill-experiment.instructions.md  task-api.instructions.md
api/: seed_data.json  server.py
demo/: __init__.py  _common.py  apply_experiment.py  baseline.py  benchmark.py  check_issues.py  file_issue.py  get_api_url.py  install_skill.py  reset_skill.py  start_mock_api.py
experiments/bulk_add_comment/: task_cli_experimental.py
scripts/: Apply-LocalExperiment.ps1  Get-IssueStatus.ps1  Get-SkillCliPath.ps1  Get-SkillEnhancementStatus.ps1  Get-TaskApiUrl.ps1  Install-SharedSkill.ps1  Invoke-BaselineScenario.ps1  Invoke-Benchmark.ps1  New-SkillEnhancement.ps1  New-UpstreamIssue.ps1  Remove-SkillEnhancement.ps1  Reset-LocalSkill.ps1  Start-MockApi.ps1
