[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-demo"
version = "0.1.0"
description = "Multiplatform demo: identify skill gaps, benchmark, and file upstream issues."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
get-api-url      = "demo.get_api_url:main"
install-skill    = "demo.install_skill:main"
start-mock-api   = "demo.start_mock_api:main"
run-baseline     = "demo.baseline:main"
apply-experiment = "demo.apply_experiment:main"
reset-skill      = "demo.reset_skill:main"
benchmark        = "demo.benchmark:main"
file-issue       = "demo.file_issue:main"
check-issues     = "demo.check_issues:main"

[tool.hatch.build.targets.wheel]
packages = ["demo"]
